Some references updated.

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.8 2007-01-04 13:21:30 hb Exp $
+%$Id: gotm.bib,v 1.9 2007-01-08 21:36:40 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -473,10 +473,9 @@ $k-\epsilon$ two-equation turbulence models",
    title    = {Non-uniform adaptive vertical grids
                in one-dimensional numerical ocean models},
    journal  = OMOD,
-   volume   = {},
-   pages    = {},
-   year     = {2003},
-   note     = acc,
+   volume   = {6},
+   pages    = {51-81},
+   year     = {2004}
 }
 
 @article(BurchardPetersen99,
@@ -576,10 +575,10 @@ $k-\epsilon$ two-equation turbulence models",
    title    = {Application of {M}odified {P}atankar schemes to stiff
                biogeochemical models for the water column},
    journal  = OD,
-   volume   = {},
-   pages    = {},
+   volume   = {55},
+   pages    = {326-337},
    year     = {2005},
-   note     = acc,
+   note     = {},
 }
 
 
@@ -1528,7 +1527,8 @@ des Unterwasser-Strahlungsfeldes",
     seamount. Part II: Resonant Generation of Trapped Waves",
   journal = "J. Phys. Oceanogr.",
   year = "1993",
-  notes = "accepted for publication"          )
+  volume = "23",
+  pages = "2373-2391" )
 
 @article(Hamilton97,
   author = "D.~P. Hamilton and S.~G. Schladow",
@@ -2448,9 +2448,10 @@ for studies of the ocean on parallel computers",
   author = "J.~D. McCalpin",
   title = "A comparison of second-order and fourth-order pressure 
     gradient algorithms in a $\sigma$-coordinate ocean model",
-  year = "1993",
-  journal = "Int. J. Numer. Methods Fluids",
-  notes = "accepted for publication"           )
+  year = "1994",
+  volume = "18",
+  pages = "361-383",
+  journal = "Int. J. Numer. Methods Fluids")
 
 @techreport(McMillan73,
   author = "W. McMillan",
@@ -3056,8 +3057,9 @@ simulated and observed vertical distributions",
   author = "T.~P. Rippeth and E.~W. Williams and J.~H. Simpson",
   title = "Reynolds stress and turbulent energy production in a tidal channel",
   journal = "J. Phys. Oceanogr.",
-  note = "accepted for publication",
-  year = "2001"    )
+  volume   = {32},
+  pages    = {1242-1251},
+  year = "2002"    )
 
 @article{Rippethetal2001A,
    author   = {Tom P. Rippeth and Neil Fisher and John H. Simpson},
@@ -3474,10 +3476,12 @@ in dissolved oxygen",
 
 @article(Simpsonetal2002A,
   author = "J.~H. Simpson and H. Burchard and N.~R. Fisher and T.~P. Rippeth",
-  title = "Modelling the cycle of tidal dissipation in a region of tidal straining",
+  title = "The semi-diurnal cycle of dissipation in a {ROFI}:
+                model-measurement comparisons",
   journal = "Cont. Shelf Res.",
-  note = "accepted for publication",
-  year = "2002"    )
+   volume   = {22},
+   pages    = {1615-1628},
+   year = "2002"    )
 
 @article{SimpsonPaulson99,
    author   = {J. J. Simpson and C. A. Paulson},
@@ -4419,18 +4423,12 @@ grid-generation package",
 @article(Wilkin93,
   author = "J.~L. Wilkin and K.~S. Hedstrom and J. Mansbridge",
   title = "An application of the capacitance matrix  method to
-    accomodate masked land areas in a primitive equation ocean model",
-  year = "1993",
-  journal = "??",
-  notes = "in preparation"       )
-
-@article(Wilkin93,
-  author = "J.~L. Wilkin and K.~S. Hedstrom and J. Mansbridge",
-  title = "An application of the capacitance matrix  method to
-    accomodate masked land areas in a primitive equation ocean model",
-  year = "1993",
-  journal = "??",
-  notes = "in preparation"       )
+    accomodate masked land areas and island circulations
+    in a primitive equation ocean model",
+  year = "1995",
+  volume = "20",
+  pages = "649--662",
+  journal = "IJNMF" )
 
 @article(Wong93,
   author = "M.~K.~W. Wong and K.~G. Budge and J.~S. Peery and A.~C. Robinson",
