--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.2 2006-12-03 13:53:16 hb Exp $
+%$Id: gotm_pub.bib,v 1.3 2007-01-09 20:51:15 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -29,6 +29,19 @@
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+
+@Article{Steetal06,
+   author =          {Nadja Steiner and Ken Denman and Norm McFarlane and 
+   Larry Solheim},
+   title =          {Simulating the Atmosphere-Ocean Physical Conditions and 
+      Effects on the Planktonic Ecosystem Response During {SERIES}},
+   journal =          DSR,
+   year =          {2006},
+   volume =         {53},
+   pages =         {2434-2454},
+   note =         {doi:10.1016/j.dsr2.2006.05.030}
+		     }
 
 @article(ralstonstacey_2004,
   author = "D. K. Ralston and M. T. Stacey",
@@ -96,7 +109,7 @@
 }
 
 @article{burchardetal_2004,
-   author    = {Hans Burchard and Karsten Bolding and Wilfried Kuhn and
+   author    = {Hans Burchard and Karsten Bolding and Wilfried K\"uhn and
                 Andreas Meister and Thomas Neumann and Lars Umlauf},
    title     = {Description of a flexible and extendable
                 physical-biogeochemical model system for the water column},
