--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.3 2007-01-09 20:51:15 hb Exp $
+%$Id: gotm_pub.bib,v 1.4 2007-01-18 07:39:27 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -31,7 +31,7 @@
 @String{inp = "In Press"}
 
 
-@Article{Steetal06,
+@Article{steineretal_2006,
    author =          {Nadja Steiner and Ken Denman and Norm McFarlane and 
    Larry Solheim},
    title =          {Simulating the Atmosphere-Ocean Physical Conditions and 
@@ -55,8 +55,9 @@
   author = "R. Torres and J. I. Allen and F. G. Figueiras",
   title = "Sequential data assimilation in an upwelling influenced estuary",
   journal = JMS,
+  volume = "60",
   year = "2006",
-  note = inp )
+  pages = "317--329")
 
 @article(allenetal_2006,
   author = "J.I. Allen and S. D. Archer and J. C. Blackford and F. J. 
@@ -65,7 +66,8 @@
   in ocean circulation",
   journal = "Tellus B",
   year = "2006",
-  note = inp )
+  volume = "58",
+  pages = "242--254")
 
 @article(allenetal_2004,
   author = "J.I. Allen and J. D. Siddorn and J. C. Blackford and F. J. 
@@ -117,7 +119,6 @@
    volume   = {61},
    pages    = {180-211},
    year     = {2006},
-   year      = {2006},
    note     = {},
 }
 
