--- a/doc/a4.tex
+++ b/doc/a4.tex
@@ -1,5 +1,5 @@
 %
-%$Id: a4.tex,v 1.4 2005-12-02 20:21:54 hb Exp $
+%$Id: a4.tex,v 1.5 2007-03-15 07:47:15 kbk Exp $
 %
 
 \documentclass[a4paper,twoside,11pt]{article}
@@ -135,6 +135,10 @@ Test Case Documentation
 \cleardoublepage
 \include{extraIntro}
 \include{seagrass}
+\include{sediment}
+
+\cleardoublepage
+\include{guiIntro}
 
 \cleardoublepage
 \include{cases}
