--- a/doc/html.tex
+++ b/doc/html.tex
@@ -1,5 +1,5 @@
 %
-%$Id: html.tex,v 1.3 2005-08-11 13:56:37 lars Exp $
+%$Id: html.tex,v 1.4 2007-03-15 07:47:15 kbk Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -117,6 +117,9 @@ Test Case Documentation
 %\include{sediment}
 \include{seagrass}
 %\include{bio}
+
+\cleardoublepage
+\include{guiIntro}
 
 \include{cases}
 
