--- a/doc/letter.tex
+++ b/doc/letter.tex
@@ -1,5 +1,5 @@
 %
-%$Id: letter.tex,v 1.3 2005-08-11 13:56:37 lars Exp $
+%$Id: letter.tex,v 1.4 2007-03-15 07:47:15 kbk Exp $
 %
 
 \documentclass[letter,twoside]{article}
@@ -130,6 +130,9 @@ Test Case Documentation
 %\include{sediment}
 \include{seagrass}
 %\include{bio}
+
+\cleardoublepage
+\include{guiIntro}
 
 \cleardoublepage
 \include{cases}
