included bio-section

--- a/doc/letter.tex
+++ b/doc/letter.tex
@@ -1,5 +1,5 @@
 %
-%$Id: letter.tex,v 1.5 2007-04-18 07:48:42 kbk Exp $
+%$Id: letter.tex,v 1.6 2007-04-20 07:14:52 lars Exp $
 %
 
 \documentclass[letter,twoside]{article}
@@ -126,10 +126,13 @@ Test Case Documentation
 \include{util}
 
 \cleardoublepage
+\include{bioIntro}
+\include{bio}
+
+\cleardoublepage
 \include{extraIntro}
-%\include{sediment}
+\include{sediment}
 \include{seagrass}
-%\include{bio}
 
 \cleardoublepage
 \include{guiIntro}
