included bio in documentation - backport from Lars

--- a/doc/html.tex
+++ b/doc/html.tex
@@ -1,5 +1,5 @@
 %
-%$Id: html.tex,v 1.5 2007-04-18 07:48:42 kbk Exp $
+%$Id: html.tex,v 1.5.2.1 2007-04-23 06:58:17 kbk Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -113,10 +113,12 @@ Test Case Documentation
 \include{utilIntro}
 \include{util}
 
+\include{bioIntro}
+\include{bio}
+
 \include{extraIntro}
-%\include{sediment}
+\include{sediment}
 \include{seagrass}
-%\include{bio}
 
 \cleardoublepage
 \include{guiIntro}
