added Maar et. all, Bruggeman and Kooijman

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.4 2007-01-18 07:39:27 hb Exp $
+%$Id: gotm_pub.bib,v 1.5 2007-06-27 13:05:42 kbk Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -24,12 +24,31 @@
 @String{JSR = "Journal of Sea Research"}
 @STRING{OD = "Ocean Dynamics"}
 @String{OM = "Ocean Modelling"}
+@String{LO = "Limnology and Oceanography"}
+@String{MEPS = "Marine Ecology Progress Series"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article(bruggemannkooijman_2007,
+  author = "J. Bruggemann and A. L. M. Kooijman",
+  title = "A biodiversity-inspire approach to aquatic ecosystem modeling.",
+  journal = LO,
+  year = "2007",
+  volume = "52(4)",
+  pages = "1533--1544")
+
+@article(maaretall_2007,
+  author = "Marie Maar and Torkel Gissel Nielsen and Karsten Bolding and
+            Hans Burchard and Andre W. Visser",
+  title = "Grazing effects of blue mussel Mytilus edulis on the pelagic
+           food web under different turbulence conditions",
+  journal = MEPS,
+  year = "2007",
+  volume = "339",
+  pages = "199--213")
 
 @Article{steineretal_2006,
    author =          {Nadja Steiner and Ken Denman and Norm McFarlane and 
