added air-sea relevant references

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.9 2007-01-08 21:36:40 hb Exp $
+%$Id: gotm.bib,v 1.10 2007-09-25 08:54:50 kbk Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -209,6 +209,23 @@
   volume = "27",
   pages = "1197--1215",
   year = "1997"  )
+
+@article(BerliandBerliand52,
+  author = "M. E. Berliand and T. G. Berliand",
+  title = "Measurement of the effective radiation of
+  the earth with consideration of the effect of cloudiness (in Russian)",
+  journal = "Izv. Akad. Nauk SSSR, Ser. Geofiz.",
+  volume = "1",
+  pages = "",
+  year = "1952"  )
+
+@article(Bignamietal95,
+  author = "F. Bignami and S. Marullo and R. Santoleri and M. E. Schiano",
+  title = "Long-wave radiation budget in the {M}editerranean {S}ea",
+  journal = "J. Geophys. Res.",
+  volume = "100",
+  pages = "2501-2514",
+  year = "1995"  )
 
 @article{Boldingetal2002,
    author   = {Karsten Bolding and Hans Burchard and Thomas
@@ -1117,13 +1134,24 @@ limnological range",
   booktitle = "Gas Transfer at Water Surfaces",
   publisher = "Reidel, Dordrecht"    )
 
-@article{Fairalletal96,
+@article{Fairalletal96a,
    author   = {C. W. Fairall and E. F. Bradley and D. P. Rogers and 
                J. B. Edson and G. S. Young},
    title    = {Bulk parameterization of air-sea fluxes for {TOGA}-{COARE}},
    journal  = JGR,
    volume   = {101},
    pages    = {3747-3764},
+   year     = {1996},
+   note     = {},
+}
+
+@article{Fairalletal96b,
+   author   = {C. W. Fairall and E. F. Bradley and J.S. Godfrey and G. A. Wick
+               and J. B. Edson and G.S. Young},
+   title    = {Cool-skin and warm-layer effects on sea surface temperature},
+   journal  = JGR,
+   volume   = {101},
+   pages    = {1295-1308},
    year     = {1996},
    note     = {},
 }
@@ -2313,6 +2341,15 @@ temperate dimictic lake",
   volume = "42",
   pages = "1633--1639",
   year = "1985"    )
+
+@article(Liuetal79,
+  author = "W. T. Liu and K. B. Katsaros and J. A. Businger",
+  title = "Bulk parameterization of the air-sea exchange of heat and
+           water vapor including the molecular constraints at the interface",
+  journal = "J. Atmos. Sci.",
+  volume = "36",
+  pages = "1722-1735",
+  year = "1979"    )
 
 @article(Livingstone97,
   author = "D.~M. Livingstone and D.~M. Imboden",
