added Carniel et. al

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.5 2007-06-27 13:05:42 kbk Exp $
+%$Id: gotm_pub.bib,v 1.6 2008-02-04 17:37:45 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -26,11 +26,21 @@
 @String{OM = "Ocean Modelling"}
 @String{LO = "Limnology and Oceanography"}
 @String{MEPS = "Marine Ecology Progress Series"}
+@String{CE = "Chemistry and Ecology"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+@article(carnieletal_2007,
+  author = "Sandro Carniel and Marcello Vichi and Mauro Sclavo",
+    title = "Sensitivity of a coupled physical-biological model to turbulence:
+             high frequency simulations in a northern {A}diratic station.",
+    journal = CE,
+    year = "2007",
+    volume = "23(2)",
+    pages = "157--175")
 
 @article(bruggemannkooijman_2007,
   author = "J. Bruggemann and A. L. M. Kooijman",
@@ -156,7 +166,7 @@
    author    = {Adolf Stips and Hans Burchard and Karsten Bolding and
                 Walter Eifler},
    title     = {Modelling of convective turbulence with a two-equation
-                $k$-$\eps$ turbulence closure scheme},
+                $k$-$\epsilon$ turbulence closure scheme},
    journal   = OD,
    volume    = 52,
    pages     = {153-168},
