--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.10 2007-09-25 08:54:50 kbk Exp $
+%$Id: gotm.bib,v 1.11 2008-07-08 10:19:56 lars Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -983,6 +983,15 @@ limnological range",
   volume = "3",
   pages = "173--184",
   year = "1973"   )
+
+@incollection(DenmanMarra1986a,
+  author = "K.~L. Denman and J. Marra",
+  title = "Modeling the time dependent photoadaption to fluctuating light",
+  pages = "341--359",
+  editor = "J. Nihoul",
+  booktitle = "Marine Enterface Ecohydrodynamics",
+  publisher = "Elsevier, Amsterdam",
+  year = "1986"   )
 
 @article(Denman95,
   author = "K.~L. Denman and A.~E. Gargett",
@@ -2725,6 +2734,14 @@ deductive approach",
   journal = "J. Meteor.",
   year = "1950"    )
 
+@article(Nagaietal2003a,
+   author   = "T. Nagai and H. Yamzaki and D. Kamykowski",
+   title    = "A {L}agrangian photoresponse model coupled with 2nd order turbulent closure",
+   journal  = "Marine Ecology Progress Series",
+   volume   = "265",
+   pages    = "17--30",
+   year     = "2003" )
+
 @article{Neumannetal2002,
    author   = {Thomas Neumann and Wolfgang Fennel and Christine Kremp},
    title    = {Experimental simulations with an ecosystem model of the
@@ -2735,7 +2752,6 @@ deductive approach",
    year     = {2002},
    note     = {},
 }
-
 
 @article(NgSpalding72,
   author = "K.~H. Ng and D.~B. Spalding",
