Two papers by Jones and Monismith (2008) added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.6 2008-02-04 17:37:45 kb Exp $
+%$Id: gotm_pub.bib,v 1.7 2010-02-11 13:17:05 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -7,7 +7,6 @@
 %@String{IJNMF = "Int. J. Numer. Meth. Fluids"}
 %@String{MWR = "Monthly Weather Review"}
 %@String{Franzius = "Mitteilungen des Franzius-Institutes"}
-%@STRING{JGR = "J. Geophys. Res."}
 %@String{ECSS = "Estuarine, Coastal and Shelf Science"}
 %@String{OD = "Ocean Dynamics"}
 %@STRING{UNESCO = "Unesco technical papers in marine sciences"}
@@ -27,11 +26,32 @@
 @String{LO = "Limnology and Oceanography"}
 @String{MEPS = "Marine Ecology Progress Series"}
 @String{CE = "Chemistry and Ecology"}
+%@STRING{JGR = "Journal of Geophysical Research"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+
+
+@article(jones_monismith_2008a,
+  author = "Nicole L. Jones and Stephen G. Monismith",
+    title = "The Influence of Whitecapping Waves on the Vertical Structure 
+             of Turbulence in a Shallow Estuarine Embayment",
+    journal = JPO,
+    year = "2008",
+    volume = "38",
+    pages = "1563--1580")
+
+@article(jones_monismith_2008b,
+  author = "Nicole L. Jones and Stephen G. Monismith",
+    title = "Modeling the influence of wave-enhanced turbulence
+             in a shallow tide- and wind-driven water column",
+    journal = JGR,
+    year = "2008",
+    volume = "113",
+    pages = "C03009, doi:10.1029/2007JC004246")
 
 @article(carnieletal_2007,
   author = "Sandro Carniel and Marcello Vichi and Mauro Sclavo",
