Two papers by Dan Conley added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.7 2010-02-11 13:17:05 hb Exp $
+%$Id: gotm_pub.bib,v 1.8 2010-02-11 13:35:23 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -26,7 +26,8 @@
 @String{LO = "Limnology and Oceanography"}
 @String{MEPS = "Marine Ecology Progress Series"}
 @String{CE = "Chemistry and Ecology"}
-%@STRING{JGR = "Journal of Geophysical Research"}
+@STRING{JGR = "Journal of Geophysical Research"}
+@STRING{JFM = "Journal of Fluid Mechanics"}
 
 
 @String{acc = "Accepted for publication"}
@@ -34,6 +35,22 @@
 @String{inp = "In Press"}
 
 
+@article(conleyetal_2008,
+  author = "D.C. Conley and S. Falchetti and I.P. Lohmann and M. Brocchini",
+    title = "The effects of flow stratification by non-cohesive sediment 
+             on transport in high-energy wave-driven flows",
+    journal = JFM,
+    year = "2008",
+    volume = "610",
+    pages = "43--67")
+
+@article(falchettietal_2010,
+  author = "S. Falchetti and D.C. Conley and M. Brocchini and S. Elgar",
+    title = "Nearshore bar migration and sediment induced buoyancy effects",
+    journal = CSR,
+    year = "2010",
+    volume = "30",
+    pages = "226--238")
 
 @article(jones_monismith_2008a,
   author = "Nicole L. Jones and Stephen G. Monismith",
@@ -258,13 +275,14 @@
   pages = "1181--1201",
   year = "2005" )
 
-@article(arneborgetall_2005,
+@article(arneborgetal_2007,
   author = "Lars Arneborg and Volker Fiekas and Lars Umlauf and Hans Burchard",
   title = "Gravity current dynamics and entrainment - {A} process study based 
   on observations in the {A}rkona {B}asin",
   journal =JPO,
-  year = "2005",
-  note = sub )
+  year = "2007",
+  volume = "37",
+  pages = "2094--2113")
 
 
 
