More papers added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.8 2010-02-11 13:35:23 hb Exp $
+%$Id: gotm_pub.bib,v 1.9 2010-02-11 14:43:47 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -28,12 +28,91 @@
 @String{CE = "Chemistry and Ecology"}
 @STRING{JGR = "Journal of Geophysical Research"}
 @STRING{JFM = "Journal of Fluid Mechanics"}
+@STRING{EM = "Ecological Modelling"}
+@STRING{BGS = "Biogeosciences"}
+@STRING{ECSS = "Estuarine, Coastal and Shelf Science"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+
+@article{kuznetzovetal_2008,
+   author   = {Ivan Kuznetzov and Thomas Neumann and Hans Burchard},
+   title    = {Model study on the ecosystem impact of a variable {C:N:P} 
+               ratio for cyanobacteria in the {B}altic {P}roper},
+   journal  = EM,
+   volume   = {219},
+   pages    = {107--114},
+   year     = {2008},
+   note     = {},
+}
+
+@article{burchard_hofmeister_2008,
+   author   = {Hans Burchard and Richard Hofmeister},
+   title    = {A dynamic equation for the potential energy anomaly for analysing
+               mixing and stratification in estuaries and coastal seas},
+   journal  = ECSS,
+   volume   = {77},
+   pages    = {679--687},
+   year     = {2008},
+   note     = {},
+}
+
+@article{burchardetal_2008,
+   author   = {Hans Burchard and G\"otz Fl\"oser and Joanna V. Staneva and
+               Rolf Riethm\"uller and Thomas Badewien},
+   title    = {Impact of density gradients on net sediment transport
+               into the {W}adden {S}ea},
+   journal  = JPO,
+   volume   = {38},
+   pages    = {566--587},
+   year     = {2008},
+   note     = {},
+}
+
+@article{burchard_2009,
+   author   = {Hans Burchard},
+   title    = {Combined effects of wind, tide
+               and horizontal density gradients
+               on stratification in estuaries and coastal seas},
+   journal  = JPO,
+   volume   = {39},
+   pages    = {2117--2136},
+   year     = {2009},
+   note     = {},
+
+@article{verspechtetal_2009,
+   author   = {Florence I. Verspecht and Hans Burchard and Tom P. Rippeth and
+               M. John Howarth and and John H. Simpson},
+   title    = {Processes impacting on stratification in a region of
+               freshwater influence: {A}pplication to {L}iverpool {B}ay},
+   journal  = JGR,
+   volume   = {114},
+   pages    = {11022, doi:10.1029/2009JC005475},
+   year     = {2009},
+   note     = {},
+} 
+
+@article{hense_quack_2009,
+   author   = {Inga Hense and Birgit Quack},
+   title    = {Modelling the vertical distribution of bromoform in the 
+               upper water column of the tropical {A}tlantic {O}cean},
+   journal  = BGS,
+   volume   = {6},
+   pages    = {535--544},
+   year     = {2009},
+}
+
+@article{hense_burchard_2010,
+   author   = {Inga Hense and Hans Burchard},
+   title    = {Modelling cyanobacteria in shallow coastal seas},
+   journal  = EM,
+   volume   = {221},
+   pages    = {238--244},
+   year     = {2010},
+}
 
 @article(conleyetal_2008,
   author = "D.C. Conley and S. Falchetti and I.P. Lohmann and M. Brocchini",
