fixed typo in Burchard 2009

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.9 2010-02-11 14:43:47 hb Exp $
+%$Id: gotm_pub.bib,v 1.10 2010-02-11 19:08:46 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -82,6 +82,7 @@
    pages    = {2117--2136},
    year     = {2009},
    note     = {},
+}
 
 @article{verspechtetal_2009,
    author   = {Florence I. Verspecht and Hans Burchard and Tom P. Rippeth and
